--- a/src/blocks/popup/__error/popup__error.css
+++ b/src/blocks/popup/__error/popup__error.css
@@ -1,5 +1,5 @@
 .popup__error {
-  display: none;
-  color: #FF0000;
-  font-size: 12px;
-}
+    font-size: 12px;
+    color: red;
+    display: none;
+  }
