--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,16 +1,15 @@
-@import url('__content/popup__content.css');
-@import url('__content/_content/popup__content_content_image.css');
-@import url('__close/popup__close.css');
-@import url('__title/popup__title.css');
-@import url('__form/popup__form.css');
-@import url('__input/popup__input.css');
-@import url('__input/_type/popup__input_type_error.css');
-@import url('__button/popup__button.css');
-@import url('__button/_disabled/popup__button_disabled.css');
-@import url('__caption/popup__caption.css');
-@import url('__image/popup__image.css');
-@import url('__error/popup__error.css');
-@import url('__error/_visible/popup__error_visible.css');
+@import url('./__content/popup__content.css');
+@import url('./__content/_content/popup__content_content_image.css');
+@import url('./__close/popup__close.css');
+@import url('./__title/popup__title.css');
+@import url('./__form/popup__form.css');
+@import url('./__input/popup__input.css');
+@import url('./__button/popup__button.css');
+@import url('./__button/__button_disabled/popup__button_disabled.css');
+@import url('./__caption/popup__caption.css');
+@import url('./__image/popup__image.css');
+@import url('./__error/popup__error.css');
+@import url('./__error/_visible/popup__error_visible.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
@@ -24,5 +23,12 @@
   bottom: 0;
   right: 0;
   z-index: 10;
-  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.3s, opacity 0.3s ease;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
 }
