--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -4,6 +4,8 @@
 @import url('./__info/profile__info.css');
 @import url('./__title/profile__title.css');
 @import url('./__image/profile__image.css');
+@import url('./__avatar/profile__avatar-container.css');
+@import url('./__avatar/profile__avatar-edit-icon.css');
 
 .profile {
   font-family: 'Inter', Arial, sans-serif;
